examples/working/errors/ann4f.slk
data cell {
  int val;
}.

infer [] y::cell<a>@M |- (exists v: y::cell<b>@v & v=@L).
print residue.



